Add working version

--- a/templates/degree_creator.html
+++ b/templates/degree_creator.html
@@ -17,7 +17,8 @@
                         <p><input type = "text" name = "player_name" required/></p>
                         <p>Your score:</p>
                         <p><input type = "number" name = "player_score" required/></p>
-                        <p>Download: <input type = "submit" value = "Classic method" name="classic"/>   <input type = "submit" value = "Neuronal method" name="neuronal"/></p>
+                        <p>Download: <input type = "submit" value = "Classic method" name="classic"/>
+                            <input type = "submit" value = "Neuronal method" name="neuronal"/></p>
                     </form>
                 </div>
             </header>
